--- a/Practic/PracticeCollage/MyLib/MyLib.csproj
+++ b/Practic/PracticeCollage/MyLib/MyLib.csproj
@@ -44,7 +44,7 @@
     <Compile Include="CollageService.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="IGroupRepository.cs" />
-    <Compile Include="IStubentRepository.cs" />
+    <Compile Include="IStudentRepository.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
