--- a/Test_16.09/MyLib/MyLib.csproj
+++ b/Test_16.09/MyLib/MyLib.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Comment.cs" />
     <Compile Include="ICommentRepository.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
